2000-08-15  Raph Levien  <raph@acm.org>

	* art_render.c (art_render_image_solid_negotiate): Only
	sets ART_IMAGE_SOURCE_CAN_COMPOSITE when a compositing
	callback is selected. Previously was causing segfaults on
	non-alpha images. Thanks to Leonard Rosenthol for spotting
	the bug.

Fri Jun 30 22:56:58 2000  Raph Levien  <raph@acm.org>

	* art_render.c (art_render_composite): Fixed a bug that caused
	it to ignore the alpha setting. Also art_render_composite_8().

2000-06-01  John Sullivan  <sullivan@eazel.com>

	* art_svp_render_aa.c: (art_svp_render_aa_iter_step):
	Made it build by correcting struct member name from
	Raph's previous checkin.

Wed May 31 11:10:58 2000  Raph Levien  <raph@acm.org>

	* art_svp_render_aa.c (art_svp_render_aa_iter_step): Updated
	n_steps_max in iter structure after steps reallocation.

Tue May 30 10:33:13 2000  Raph Levien  <raph@acm.org>

	* art_svp_render_aa.c (art_svp_render_aa_iter_step): Fixed not
	updating iter->steps when steps gets reallocated.

2000-05-30  Pavel Cisler <pavel@eazel.com>

	* art_rgba.c:
	Make it build -- fix a broken include.

Tue May 30 00:09:21 2000  Raph Levien  <raph@acm.org>

	* art_render_gradient.c (art_render_gradient_setpix): Fixed
	an off-by-one loop error.

Mon May 29 15:00:39 2000  Raph Levien  <raph@acm.org>

	* Makefile.am: Moved relevant .h files into HEADERS stanza.

Mon May 29 13:48:49 2000  Raph Levien  <raph@acm.org>

	This is a fairly major commit, as it adds both the new, modular
	rendering architecture and gradients. Quite a bit of the code
	feels like "reference code" now, in that it is (hopefully)
	correct, but not necessarily very fast. In addition, there remain
	a few things not done, including the use of SVP's as non-driver
	mask sources. AlphaGamma and filter level also remain
	unimplemented. No compositing modes other than ART_NORMAL are
	implemented. All in good time!
	
	* configure.in: added -Wmissing-prototypes flag. Bumped version
	number to 2.3.0.

	* art_render.h: