@@ -30,3 +30,4 @@ testart
 testuta
 libart-config
 libartConf.sh
+libart-2.0.pc
