@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libart
+Description: LGPL version of the libart library
+Version: @VERSION@
+Libs: -L${libdir} -lart_lgpl
+Cflags: -I${includedir}
